[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flask_restone"
version = "0.1.0"
authors = [
  { name="Arry Lee", email="arry_lee@qq.com" },
]
description = "Restone make you the rest one"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/arry-lee/flask_restone"
"Bug Tracker" = "https://github.com/arry-lee/flask_restone/issues"
